[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextPanel" type="Panel" parent="."]
margin_left = -2.0
margin_top = 130.0
margin_right = 92.0
margin_bottom = 162.0

[node name="StatsPanel" type="Panel" parent="."]
margin_left = 2.0
margin_top = 59.0
margin_right = 88.0
margin_bottom = 82.0

[node name="HBoxContainer" type="HBoxContainer" parent="StatsPanel"]
margin_left = 2.0
margin_top = 1.0
margin_right = 84.0
margin_bottom = 22.0

[node name="HPLabel" type="Label" parent="StatsPanel/HBoxContainer"]
margin_top = 5.0
margin_right = 39.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="MPLabel" type="Label" parent="StatsPanel/HBoxContainer"]
margin_left = 43.0
margin_top = 5.0
margin_right = 82.0
margin_bottom = 16.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 9.0
margin_top = 88.0
margin_right = 81.0
margin_bottom = 134.0
custom_constants/vseparation = 7
custom_constants/hseparation = 8
columns = 2

[node name="SwordButton" type="Button" parent="GridContainer"]
margin_right = 32.0
margin_bottom = 13.0
rect_min_size = Vector2( 32, 13 )
text = "SWORD"

[node name="BlockButton" type="Button" parent="GridContainer"]
margin_left = 40.0
margin_right = 72.0
margin_bottom = 13.0
rect_min_size = Vector2( 32, 13 )
text = "BLOCK"

[node name="MagicButton" type="Button" parent="GridContainer"]
margin_top = 20.0
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 13 )
text = "MAGIC"

[node name="ChatButton" type="Button" parent="GridContainer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 72.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 13 )
text = "CHAT"

[connection signal="pressed" from="GridContainer/SwordButton" to="." method="_on_SwordButton_pressed"]
[connection signal="pressed" from="GridContainer/BlockButton" to="." method="_on_BlockButton_pressed"]
[connection signal="pressed" from="GridContainer/MagicButton" to="." method="_on_MagicButton_pressed"]
[connection signal="pressed" from="GridContainer/ChatButton" to="." method="_on_ChatButton_pressed"]
